<resources>
    <string name="app_name">task_8_weather_mvp</string>
    <string name="weather">Weather</string>
    <string name="defaultCity">Minsk</string>
    <string name="temperature">-20 C</string>
    <string name="infoWeather">now snowing</string>
    <string name="time">15:00</string>
    <string name="weatherInfo">Cloudy</string>
    <string name="celsius">Celsius</string>
    <string name="settings">Settings</string>
    <string name="cities">Cities</string>
    <string name="minsk">Minsk</string>
    <string name="ok">OK</string>

</resources>