<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/weatherIconItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherTime"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/time"
        android:layout_margin="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/weatherIconItem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/weatherInfo"
        android:layout_margin="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/weatherTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/weatherTemperature"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/temperature"
        android:layout_margin="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/weather"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/degree"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/ic_degree"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherTemperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"
        android:backgroundTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>